fix hover animation (flickering before applying desired color)

--- a/frontend/src/css/app.scss
+++ b/frontend/src/css/app.scss
@@ -15,6 +15,15 @@ html, body {
 }
 
 /*
+ * hover animation (fix)
+ */
+.q-focus-helper {
+  &:before, &:after {
+    transition: none !important;
+  }
+}
+
+/*
  * container
  */
 .container {
